# nfc-keyboard-emulator

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  package-lock.json  package.json  vitest.config.ts
.github/workflows/: changelog.yml  ci.yml  release.yml
scripts/: gen-licenses.mjs
src/: App.vue  i18n.ts  licenses.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: accessibility.rs  commands.rs  config.rs  csv_export.rs  formatter.rs  lib.rs  main.rs  pipeline.rs  reader.rs  reader_pcsc.rs  scan.rs  state.rs  typer.rs  worker.rs
src/components/: AboutPanel.vue  AccessibilityPanel.vue  FormatSettings.vue  NavSidebar.vue  ReaderSelect.vue  ScanLog.test.ts  ScanLog.vue  Select.vue  StatusBar.vue  Toggle.vue  TypingToggle.vue
src/lib/: licenses.ts  nav.ts  scanLog.test.ts  scanLog.ts  tauri.ts  update.ts
src/locales/: de.ts  en.ts
